--- a/src/app/oaf/forecast/forecast.component.html
+++ b/src/app/oaf/forecast/forecast.component.html
@@ -39,8 +39,8 @@
             <ng-container *ngIf="row.data[column.id]; let bin">
               <span class="oafColumn">N:</span>
               <ng-container *ngIf="bin.p95maximum !== 0 ; else asterisk">
-                  {{ bin.p95minimum | sharedRoundDown: 2 }} to
-                      {{ bin.p95maximum | sharedRoundUp: 2 }}
+                  {{ bin.p95minimum | sharedRoundDown: 2 | sharedNumberWithSeparator }} to
+                      {{ bin.p95maximum | sharedRoundUp: 2 | sharedNumberWithSeparator }}
               </ng-container>
               <br />
               <span class="oafColumn">P:</span> {{ bin.probability | oafPercent }}
