--- a/src/app/oaf/model/model.component.html
+++ b/src/app/oaf/model/model.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="oafService.model$ | async as model">
-  <h3><a href="{{ model.reference }}">{{ model.name }}</a></h3>
+  <h3>{{ model.name }}</h3>
 
   <h4>Parameters</h4>
   <dl class="description-table">
