--- a/src/app/executive/executive/executive.component.html
+++ b/src/app/executive/executive/executive.component.html
@@ -66,6 +66,11 @@
       <executive-tsunami-pin>
       </executive-tsunami-pin>
     </li>
+
+    <li *ngIf="event.properties.mag && event.geometry">
+      <executive-nearby-seismicity-pin [event]="event">
+      </executive-nearby-seismicity-pin>
+    </li>
   </ul>
 
   <shared-text-product
