--- a/src/app/executive/finite-fault-pin/finite-fault-pin.component.scss
+++ b/src/app/executive/finite-fault-pin/finite-fault-pin.component.scss
@@ -1,8 +1,10 @@
-img {
-  width: 100%;
-  margin-bottom: 1em;
-}
-
 figure {
   margin: 1em 0 0;
 }
+
+img {
+  margin-bottom: 1em;
+  max-width: 100%;
+}
+
+
