fixed tsunami pin image link

--- a/src/app/executive/tsunami-pin/tsunami-pin.component.html
+++ b/src/app/executive/tsunami-pin/tsunami-pin.component.html
@@ -1,6 +1,6 @@
 <basic-pin [href]="href" [title]="title" [footer]="footer" >
   <div>
-    <img src="../assets/tsunami.jpg" alt="Tsunami Warning Center"
+    <img src="./assets/tsunami.jpg" alt="Tsunami Warning Center"
         class="tsunami-logo" />
     <small>
       To view any current tsunami advisories for this and other events please
