custom scaling and graph tooltips working

--- a/src/app/dyfi/intensity-vs-distance/intensity-vs-distance.component.html
+++ b/src/app/dyfi/intensity-vs-distance/intensity-vs-distance.component.html
@@ -13,12 +13,13 @@
       [gradient]="gradient"
       [xAxis]="showXAxis"
       [yAxis]="showYAxis"
+      [yScaleMin]="1"
+      [yScaleMax]="10"
       [legend]="showLegend"
       [scaleType]="scaleType"
-      [showGridLines]="false"
+      [showGridLines]="true"
       [showXAxisLabel]="showXAxisLabel"
       [showYAxisLabel]="showYAxisLabel"
-      [showRightYAxisLabel]="showYAxisLabel"
       [xAxisLabel]="xAxisLabel"
       [yAxisLabel]="yAxisLabel">
     </bubble-line-chart-component>
