--- a/src/app/shared/ngx-charts/bubble-line-chart/bubble-line-chart/bubble-line-chart.component.html
+++ b/src/app/shared/ngx-charts/bubble-line-chart/bubble-line-chart/bubble-line-chart.component.html
@@ -98,8 +98,8 @@
   <ng-template #meanTemplate let-model="model">
     <h3>{{ model.series }}</h3>
     <dl class="description-table">
-      <dt>Estimated Intensity: </dt><dd>{{ model.value }}</dd>
-      <dt>Epicentral Distance: </dt><dd>{{ model.x }} km</dd>
+      <dt>Intensity (mmi): </dt><dd>{{ model.value }}</dd>
+      <dt>Hypocentral Distance (km): </dt><dd>{{ model.x }}</dd>
     </dl>
   </ng-template>
 </ngx-charts-chart>
