Responses pagination working

--- a/src/app/dyfi/responses/responses.component.html
+++ b/src/app/dyfi/responses/responses.component.html
@@ -64,7 +64,10 @@
           </mat-cell>
         </ng-container>
 
-  
-
       </mat-table>
+  
+      <mat-paginator
+          [pageSizeOptions]="paginatorSizes"
+          showFirstLastButtons></mat-paginator>
+
 </ng-container>
