--- a/src/app/executive/executive/executive.component.html
+++ b/src/app/executive/executive/executive.component.html
@@ -66,6 +66,11 @@
       <executive-tsunami-pin>
       </executive-tsunami-pin>
     </li>
+
+    <li *ngIf="event | nearbySeismicityLink: 'nearby'; let link">
+      <executive-nearby-seismicity-pin [event]="event" [link]="link">
+      </executive-nearby-seismicity-pin>
+    </li>
   </ul>
 
   <shared-text-product
