added summary-link component

--- a/src/app/product-page/header/header.component.html
+++ b/src/app/product-page/header/header.component.html
@@ -2,6 +2,9 @@
   <!-- custom module header content -->
   <ng-content></ng-content>
 
+  <product-page-summary-link [product]="product" [event]="event">
+  </product-page-summary-link>
+
   <small class="attribution">
     Contributed by
     <shared-product-attribution [product]="product"></shared-product-attribution>
