--- a/src/app/executive/dyfi-pin/dyfi-pin.component.html
+++ b/src/app/executive/dyfi-pin/dyfi-pin.component.html
@@ -7,9 +7,16 @@
       [bubble]="true"
       [intensity]="product?.properties?.maxmmi">
     </shared-mmi>
-    <figure *ngIf="product?.properties?.eventsource +
-        product?.properties?.eventsourcecode + '_ciim_geo.jpg' as image">
-      <img src="{{ product?.contents[image].url }}" alt="DYFI Intensity Map" />
+    <figure *ngIf="product | sharedProductContent:
+        product?.properties?.eventsource +
+        product?.properties?.eventsourcecode + '_ciim_geo.jpg'
+        let image; else empty">
+      <img src="{{ image.url }}" alt="DYFI Intensity Map" />
     </figure>
+    <ng-template #empty>
+      <p class="alert warning">
+        Image does not exist
+      </p>
+    </ng-template>
   </div>
 </basic-pin>
