fixed minimum magnitude logic to reflect on the nearby seismicity pin

--- a/src/app/executive/nearby-seismicity-pin/nearby-seismicity-pin.component.html
+++ b/src/app/executive/nearby-seismicity-pin/nearby-seismicity-pin.component.html
@@ -28,7 +28,7 @@
       </div>
       <div class="text-container">
         <h4>Magnitude Range</h4>
-        <span class="pin-time">&ge; 4.0</span>
+        <span class="pin-time">&ge; {{ minimumMag | sharedNumber:1 }}</span>
       </div>
     </li>
   </ul>
