--- a/src/app/map/map/map.component.html
+++ b/src/app/map/map/map.component.html
@@ -1,5 +1,7 @@
 <ng-container *ngIf="eventService.event$ | async; let event">
   <ng-container *ngIf="activatedRoute.queryParamMap | async; let params">
+    <shared-summary-link [productType]="'map'" [event]="event">
+    </shared-summary-link>
     <shared-map
         [bounds]="params | interactiveMapBounds"
         [overlays]="event | interactiveMapOverlays:params"
