added shared-summary-link component

--- a/src/app/product-page/header/header.component.html
+++ b/src/app/product-page/header/header.component.html
@@ -2,8 +2,8 @@
   <!-- custom module header content -->
   <ng-content></ng-content>
 
-  <product-page-summary-link [product]="product" [event]="event">
-  </product-page-summary-link>
+  <shared-summary-link [productType]="productType" [event]="event">
+  </shared-summary-link>
 
   <small class="attribution">
     Contributed by
