--- a/src/app/product-page/product-page/product-page.component.html
+++ b/src/app/product-page/product-page/product-page.component.html
@@ -7,6 +7,7 @@
         [contributors]="contributorService.contributors$ | async"
         [event]="event"
         [product]="event.product"
+        [productType]="productType"
       >
         <!-- custom module header content -->
         <ng-content select="[header]"></ng-content>
