added shared summary link component

--- a/src/app/tell-us/tell-us/tell-us.component.html
+++ b/src/app/tell-us/tell-us/tell-us.component.html
@@ -1,3 +1,8 @@
+<ng-container *ngIf="eventService.event$ | async; let event">
+  <shared-summary-link [productType]="'tellus'" [event]="event">
+  </shared-summary-link>
+</ng-container>
+
 <h2>Felt Report - Tell Us!</h2>
 
 <button (click)="showForm()" mat-raised-button>
