--- a/src/app/dyfi/dyfi/dyfi.component.scss
+++ b/src/app/dyfi/dyfi/dyfi.component.scss
@@ -3,3 +3,13 @@
     font-size: .88em;
     margin-bottom: 1em;
 }
+
+.csv-download {
+  margin-top: 15px;
+  float: right;
+}
+
+.download-link {
+  display: none;
+}
+
