aded distance unit

--- a/src/app/dyfi/responses/responses.component.html
+++ b/src/app/dyfi/responses/responses.component.html
@@ -42,7 +42,7 @@
         Distance
       </mat-header-cell>
       <mat-cell *matCellDef="let dyfi">
-        {{ dyfi.dist }}
+        {{ dyfi.dist }} km
       </mat-cell>
     </ng-container>
 
