--- a/src/app/executive/origin-pin/origin-pin.component.html
+++ b/src/app/executive/origin-pin/origin-pin.component.html
@@ -1,28 +1,33 @@
-<basic-pin *ngIf="product"
+<basic-pin
     [link]="link"
     [product]="product"
     [title]="title">
-  <dl>
-    <ng-container *ngIf="product.properties as properties">
-      <dt>Review Status</dt>
-      <dd>{{ (properties['review-status'] || 'automatic') | uppercase }}</dd>
 
-      <dt>Magnitude</dt>
-      <dd>
-        {{ properties.magnitude | sharedNumber:1 }}
-        {{ properties['magnitude-type'] }}
-      </dd>
+  <dl *ngIf="product?.properties as properties; else noProperties">
+    <dt>Review Status</dt>
+    <dd>{{ (properties['review-status'] || 'automatic') | uppercase }}</dd>
 
-      <dt>Depth</dt>
-      <dd>{{ properties.depth | sharedNumber:1:'km' }}</dd>
+    <dt>Magnitude</dt>
+    <dd>
+      {{ properties.magnitude | sharedNumber:1 }}
+      {{ properties['magnitude-type'] }}
+    </dd>
 
-      <dt>Time</dt>
-      <dd>
-        {{ properties.eventtime | date:"yyyy-MM-dd":"UTC" }}
-        <br/>
-        {{ properties.eventtime | date:"HH:mm:ss":"UTC" }}
-        UTC
-      </dd>
-    </ng-container>
+    <dt>Depth</dt>
+    <dd>{{ properties.depth | sharedNumber:1:'km' }}</dd>
+
+    <dt>Time</dt>
+    <dd>
+      {{ properties.eventtime | date:"yyyy-MM-dd":"UTC" }}
+      <br/>
+      {{ properties.eventtime | date:"HH:mm:ss":"UTC" }}
+      UTC
+    </dd>
   </dl>
+
+  <ng-template #noProperties>
+    <p class="alert error">
+      Origin properties not specified.
+    </p>
+  </ng-template>
 </basic-pin>
