--- a/src/app/executive/basic-pin/basic-pin.component.scss
+++ b/src/app/executive/basic-pin/basic-pin.component.scss
@@ -1,52 +1,58 @@
-article {
-  border: 1px solid #ccc;
-  cursor: pointer;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  margin: 0;
-  outline: none;
-  padding: 0;
-  width: 100%;
-}
-
-header,
-section,
-footer {
-  overflow: hidden;
-  padding: 0.75em;
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
-}
-
-section {
-  flex-grow: 1;
-  font-size: 0.88em;
-  margin: 0.5em 0;
-  max-height: 100%;
-  padding: 0 0.75em;
-}
-
-footer {
-  color: #666;
-  font-size: 0.77em;
-  position: relative;
-  text-align: center;
-
-  &:before {
-    background-image: linear-gradient(90deg, transparent 10%, rgba(0, 0, 0, 0.2) 50%, transparent 90%);
-    content: '';
-    height: 1px;
-    left: 0;
-    position: absolute;
-    top: 0;
+basic-pin {
+  article {
+    border: 1px solid #ccc;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    margin: 0;
+    outline: none;
+    padding: 0;
     width: 100%;
   }
-}
-.pin-link-wrapper {
-  text-decoration: none;
-  color: inherit;
+
+  header,
+  section,
+  footer {
+    overflow: hidden;
+    padding: 0.75em;
+  }
+
+  header {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  section {
+    flex-grow: 1;
+    font-size: 0.88em;
+    margin: 0.5em 0;
+    max-height: 100%;
+    padding: 0 0.75em;
+
+    & > :first-child {
+      margin-top: 0;
+    }
+  }
+
+  footer {
+    color: #666;
+    font-size: 0.77em;
+    position: relative;
+    text-align: center;
+
+    &:before {
+      background-image: linear-gradient(90deg, transparent 10%, rgba(0, 0, 0, 0.2) 50%, transparent 90%);
+      content: '';
+      height: 1px;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 100%;
+    }
+  }
+  .pin-link-wrapper {
+    text-decoration: none;
+    color: inherit;
+  }
 }
